--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,17 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias = 'key()'
+            storeFile file('D:\\sugarguideapp.jks')
+            storePassword 'aingdidie'
+            keyPassword 'aingdidie'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
-        applicationId "tubes.akb"
+        applicationId "com.sugarguide"
         minSdkVersion 22
         targetSdkVersion 28
         versionCode 1
@@ -27,4 +35,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.mcxiaoke.volley:library-aar:1.0.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.mcxiaoke.volley:library-aar:1.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.afollestad.material-dialogs:core:0.9.0.1'
+    implementation 'com.github.medyo:android-about-page:1.1.1'
 }
