--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="tubes.akb">
+    package="com.sugarguide">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
+
+        android:name="com.sugarguide.app.AppController"
         android:allowBackup="true"
         android:icon="@drawable/logo1"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo1"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".NavigationActivity"
-            android:label="@string/title_activity_navigation"
+            android:name="com.sugarguide.DetailActivity"
+            android:label="@string/title_activity_detail"
             android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".HomeActivity" />
-        <activity android:name=".MainActivity">
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/map_key" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+
+        <activity
+            android:name="com.sugarguide.NavigationActivity"
+            android:label="@string/title_activity_navigation"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name="com.sugarguide.HomeActivity" />
+        <activity android:name="com.sugarguide.Import" />
+        <activity android:name="com.sugarguide.LogicActivity"></activity>
+        <activity android:name="com.sugarguide.About"></activity>
+        <activity android:name="com.sugarguide.Logic_Activity2"
+            android:label="LIST PETSHOP Terdekat"></activity>
+        <activity android:name="com.sugarguide.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
